<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">
	
    <Button 
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/new_game"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:typeface="monospace"
        android:onClick="onPlay"/> 
        
    <Button 
        android:id="@+id/option_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/options"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="onOption"/> 
        
    <Button 
        android:id="@+id/high_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/high_score"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="onScore"/> 
        
    <!-- 
    <Button 
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/about"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/> 
         -->
    <Button 
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/exit"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="onExit"/> 
    
</LinearLayout>