<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    	
    <TextView
        android:id="@+id/vibrate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/vibration"
        android:clickable="false"
        android:gravity="center"
        android:textSize="24dp" />
    
    <Button 
        android:id="@+id/vibration_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/on"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:typeface="monospace"
        android:onClick="onClick"/> 
        
    <Button 
        android:id="@+id/vibration_off_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/off"
        android:minHeight="40dp"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:typeface="monospace"
        android:onClick="onClick"/> 
    
</LinearLayout>